<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".billboardFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroudLayout">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_to_create_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/GapLayout"
            android:layout_marginBottom="@dimen/GapLayout"
            android:background="@color/buttonColor"
            android:clickable="true"
            android:contentDescription="Add movie"
            android:src="@drawable/baseline_add_24"
            app:backgroundTint="@color/buttonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/titleBillboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/GapLayout"
            android:text="@string/titleText"
            android:textSize="@dimen/titleTextGap"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/firstCard"
            android:layout_width="@dimen/basicGap"
            android:layout_height="@dimen/cardHeightGap"
            android:layout_marginStart="@dimen/paddigGap"
            android:layout_marginEnd="@dimen/paddigGap"
            android:backgroundTint="@color/cardLayout"
            app:cardCornerRadius="@dimen/cornerRadiusGap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleBillboard"
            app:layout_constraintVertical_bias="0.055">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/cardHeightGap"
                    android:layout_height="@dimen/cardHeightGap"
                    android:src="@drawable/star_wars"
                    android:paddingLeft="@dimen/paddigGap"
                    />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/GapLayout">

                <TextView
                    android:layout_width="225dp"
                    android:layout_height="70dp"
                    android:text="@string/firstMovieName"
                    android:textSize="@dimen/sizeInfoGap"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/paddigGap"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calificationFirstMovie"
                    android:textSize="@dimen/sizeInfoGap"
                    android:textColor="@color/calification"
                    android:paddingLeft="@dimen/paddigGap"/>
            </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>